prevent logo from stretching

--- a/src/Header.css
+++ b/src/Header.css
@@ -10,6 +10,7 @@
 .header-logo {
   height: 200px;
   width: 100%;
+  object-fit: contain;
 }
 
 @media (min-width: 750px) {
